--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,71 +1,116 @@
 cmake_minimum_required(VERSION 3.28)
-project(AINoiseSuppressionLinux 
+project(NeuralMic
     VERSION 2.0.0 
     LANGUAGES CXX
-    DESCRIPTION "A Real Time AI Based Noise Suppression Client"
+    DESCRIPTION "Real-time AI-based noise suppression for Linux"
 )
 
-# Require C++23
+# C++ Standard
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Check Libraries
+# ============================================================================
+# OPTIONS
+# ============================================================================
+
+option(FETCH_ONNXRUNTIME "Download and build ONNX Runtime from source" ON)
+
+# ============================================================================
+# DEPENDENCIES
+# ============================================================================
+
+# ALSA (Audio) - Required
 find_package(ALSA REQUIRED)
 
-# Add include/ Directory
-include_directories(${PROJECT_SOURCE_DIR}/include)
+# ONNX Runtime
+if(FETCH_ONNXRUNTIME)
+    message(STATUS "Downloading ONNX Runtime...")
+    include(FetchContent)
+    FetchContent_Declare(onnxruntime
+        URL https://github.com/microsoft/onnxruntime/releases/download/v1.23.2/onnxruntime-linux-x64-1.23.2.tgz
+        SOURCE_DIR ${CMAKE_BINARY_DIR}/_deps/onnxruntime
+    )
+    FetchContent_MakeAvailable(onnxruntime)
+    set(ONNXRUNTIME_INCLUDE_DIR ${CMAKE_BINARY_DIR}/_deps/onnxruntime/include)
+    set(ONNXRUNTIME_LIB ${CMAKE_BINARY_DIR}/_deps/onnxruntime/lib/libonnxruntime.so)
+    set(HAVE_ONNXRUNTIME TRUE)
+    message(STATUS "ONNX Runtime Downloaded!")
+else()
+    # Try to find system-installed ONNX Runtime
+    find_package(onnxruntime CONFIG QUIET)
+    if(onnxruntime_FOUND)
+        message(STATUS "ONNX Runtime Found!")
+        set(HAVE_ONNXRUNTIME TRUE)
+        set(ONNXRUNTIME_TARGET onnxruntime::onnxruntime)
+    else()
+        message(STATUS "ONNX Runtime not found")
+        message(STATUS "  Use: cmake .. -DFETCH_ONNXRUNTIME=ON  (to auto-download)")
+        set(HAVE_ONNXRUNTIME FALSE)
+    endif()
+endif()
 
-# Add Custom Library (without main.cpp)
-add_library(NeuralMicLib 
+# ============================================================================
+# LIBRARY: NeuralMicLib
+# ============================================================================
+
+add_library(NeuralMicLib
     src/Utils/MicReader.cpp
+    src/Core/OnnxInference.cpp
 )
 
-# Add Executable
-add_executable(NeuralMic
-    src/main.cpp
-)
-
-# Link libraries to executable
-target_link_libraries(NeuralMic
-    NeuralMicLib
-    ${ALSA_LIBRARIES}  
-)
-
-# Include directories for library
 target_include_directories(NeuralMicLib PUBLIC
     ${PROJECT_SOURCE_DIR}/include
     ${ALSA_INCLUDE_DIRS}
 )
 
-# Include directories for executable
-target_include_directories(NeuralMic PRIVATE 
-    ${PROJECT_SOURCE_DIR}/include
-    ${ALSA_INCLUDE_DIRS}
+target_link_libraries(NeuralMicLib PUBLIC
+    ${ALSA_LIBRARIES}
 )
 
-# Print configuration summary
+# Link ONNX Runtime if available
+if(HAVE_ONNXRUNTIME)
+    if(FETCH_ONNXRUNTIME)
+        target_include_directories(NeuralMicLib PUBLIC ${ONNXRUNTIME_INCLUDE_DIR})
+        target_link_libraries(NeuralMicLib PUBLIC ${ONNXRUNTIME_LIB})
+    else()
+        target_link_libraries(NeuralMicLib PUBLIC ${ONNXRUNTIME_TARGET})
+    endif()
+    target_compile_definitions(NeuralMicLib PUBLIC HAVE_ONNXRUNTIME=1)
+endif()
+
+# ============================================================================
+# EXECUTABLE: NeuralMic
+# ============================================================================
+
+add_executable(NeuralMic
+    src/main.cpp
+)
+
+target_include_directories(NeuralMic PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+)
+
+target_link_libraries(NeuralMic PRIVATE
+    NeuralMicLib
+)
+
+# ============================================================================
+# BUILD INFO
+# ============================================================================
+
 message(STATUS "")
 message(STATUS "═══════════════════════════════════════════")
-message(STATUS "  Configuration Summary")
+message(STATUS "  Build Configuration")
 message(STATUS "═══════════════════════════════════════════")
-message(STATUS "  Project:          ${PROJECT_NAME} ${PROJECT_VERSION}")
-message(STATUS "  Build Type:       ${CMAKE_BUILD_TYPE}")
-message(STATUS "  C++ Standard:     C++23")
-message(STATUS "  Compiler:         ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
-message(STATUS "  Install Prefix:   ${CMAKE_INSTALL_PREFIX}")
+message(STATUS "  Project:        ${PROJECT_NAME} ${PROJECT_VERSION}")
+message(STATUS "  C++ Standard:   ${CMAKE_CXX_STANDARD}")
+message(STATUS "  Compiler:       ${CMAKE_CXX_COMPILER_ID}")
+message(STATUS "  Build Type:     ${CMAKE_BUILD_TYPE}")
 message(STATUS "")
-message(STATUS "  Features:")
-message(STATUS "    GTK Version:    ${GTK3_VERSION}${GTK4_VERSION}")
-message(STATUS "    CUDA Support:   ${USE_CUDA}")
-message(STATUS "    ONNX Runtime:   ${USE_ONNXRUNTIME}")
-message(STATUS "    TensorRT:       ${USE_TENSORRT}")
-message(STATUS "    LTO Enabled:    ${ENABLE_LTO}")
-message(STATUS "")
-message(STATUS "  Sanitizers:")
-message(STATUS "    AddressSan:     ${ENABLE_ASAN}")
-message(STATUS "    ThreadSan:      ${ENABLE_TSAN}")
-message(STATUS "    MemorySan:      ${ENABLE_MSAN}")
+message(STATUS "  Dependencies:")
+message(STATUS "    ALSA:         ✓ FOUND")
+message(STATUS "    ONNX Runtime: ${HAVE_ONNXRUNTIME}")
 message(STATUS "═══════════════════════════════════════════")
 message(STATUS "")
